--- a/eid/src/main/resources/application.properties
+++ b/eid/src/main/resources/application.properties
@@ -4,3 +4,11 @@ spring.datasource.password=
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
+
+# spring.datasource.url=${SPRING_DATASOURCE_URL}
+# spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+# spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+# spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER-CLASS-NAME}
+# spring.datasource.type = ${SPRING_DATASOURCE_TYPE}
+# spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL-AUTO}
+# spring.jpa.properties.hibernate.dialect=${SPRING_JPA_DATABASE-PLATFORM}
